--- a/動畫資料庫~/trytomakeadice.html
+++ b/動畫資料庫~/trytomakeadice.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>運用圖片製作的骰子</title>
     <style>
         .dice1 {
             width: 100px;
@@ -161,7 +161,7 @@
         .box1 {
             background-position: 0px 0px;
             transform: rotateY(90deg) translateZ(50px);
-            opacity: 0.1;
+            /* opacity: 0.1; */
         }
 
 
