--- a/動畫資料庫~/下拉式表單/bugar-copy.html
+++ b/動畫資料庫~/下拉式表單/bugar-copy.html
@@ -7,13 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+         /* 人話：我想要讓每一個列表，前面不要有點點 */
         ul {
+           
             /* 取消ul預設的內縮及樣式 */
             margin: 0;
             padding: 0;
             list-style: none;
-            /*這個功能是將，圈圈還有框框等等取消的嘟星*/
+            /*這個功能是將，圈圈還有框框等等取消的東西*/
         }
+        /* 人話：我要讓整個下拉式表單都是這個顏色以及字體以及匡線等等 */
         ul.drop-down-menu {
             /*定義出以下的資料，這是下拉式表單的核心*/
             border: #ccc 1px solid;
@@ -22,9 +25,10 @@
             /*這其實就是同時能夠達成行列元素以及區塊元素的效果 */
             /* 這個選項可以讓資料 */
 
-            font-family: 'Open Sans', Arial, sans-serif;
+            font-family:  Arial, sans-serif;
             font-size: 13px;
         }
+        /* 人話：我要讓每一個文字都不要隨便換行不管多長，都不可以而且我還要有表格的感覺 */
         ul.drop-down-menu li {
             position: relative;
             white-space: nowrap;
@@ -32,13 +36,17 @@
             /* 由於上面已經有了，基本的整個匡線了，因此我們只需要右邊的匡線就可以了 */
             border-right: #ccc 1px solid;
         }
-        /* 大於的符號表示只有第一層級的才有，last-child就是表示，只選取最後一個部分 */
-        ul.drop-down-menu>li:last-child {
+        /* 人話：我要讓下拉式選單中，第一層的文字標籤中，最後一個不要有匡線 */
+        ul.drop-down-menu >li:last-child {
+                /* 大於的符號表示只有第一層級的才有，last-child就是表示，只選取最後一個部分 */
             /* 此處用none是因為外部早就有匡線了，因此取消掉，才不會重複－ */
-            border-right: none;
+            border-right:none;
+            /* border-right: none; */
+            
         }
-        /* 讓全部的ＬＩ先飄起來 */
+        /* 人話：我要讓這些選項水平排列 */
         ul.drop-down-menu>li {
+            /* 讓全部的ＬＩ先飄起來 */
             float: left;
             /* 只有第一層是靠左對齊*/
         }
@@ -54,16 +62,19 @@
             line-height: 40px;
             /* 調整整體高度，因為Ａ標籤是屬於行內元素 */
         }
+        /* 當我碰到在下拉式選單內的我希望他們可以變色 */
         ul.drop-down-menu a:hover {
             /* 滑鼠滑入按鈕變色*/
             background-color: #ef5c28;
             color: #fff;
         }
-        ul.drop-down-menu li:hover>a {
-            /* 滑鼠移入次選單上層按鈕保持變色*/
+        /*  */
+        /* 人話：可以讓使用者知道自己是按了什麼過來這裡的 */
+        /* 滑鼠移入次選單上層按鈕保持變色*/
+        /* ul.drop-down-menu li:hover>a {
             background-color: #ef5c28;
             color: #fff;
-        }
+        } */
         /* 第二層選單開始 */
         ul.drop-down-menu ul {
             border: #ccc;
@@ -82,11 +93,13 @@
         ul.drop-down-menu ul li:last-child {
             /* border-bottom: none; */
         }
+        /* 這是在確定下面的那一層也可以在上面 */
         ul.drop-down-menu ul ul {
             z-index: 2;
             top: 10px;
             left: 90%;
         }
+        /* 底下的部分預設必須是關閉的，不然直接顯示出來其實很佔位 */
         ul.drop-down-menu ul {
             display: none;
         }
