--- a/resume/html/resume.html
+++ b/resume/html/resume.html
@@ -24,7 +24,7 @@
             <div class="face"></div>
             <div class="select-nav">
                 <div class="drop-down-menu">
-                    <div class="menu1"><a class="fas " href="#">首頁</a>
+                    <div><a class="fas " href="#"> 首頁</a>
                     </div>
                     <div><a class="fas " href="#"> 自傳</a>
                     </div>
@@ -36,7 +36,7 @@
                     </div>
                     </class=>
                 </div>
-                
+
             </div>
         </div>
         <div class="nav-right">
@@ -62,7 +62,8 @@
                     <div class="small-title">Hi There</div>
                     <div class="title"><b> 我是<span class="strong">誠峻</span></b></div>
                     <div class="plug">具有後端技巧的前端工程師</div>
-                    <div class="introduce">畢業於國立澎湖科技大學，在過去行銷專案中，<br>因緣際會接觸程式設計後，感受到代碼中的魔法，<br>下定決心轉職網頁工程師，追求自己所愛。<br>
+                    <div class="introduce fas">
+                        畢業於國立澎湖科技大學，在過去行銷專案中，<br>因緣際會接觸程式設計後，感受到代碼中的魔法，<br>下定決心轉職網頁工程師，追求自己所愛。<br>
                         目前已完成勞動部職業訓練共460個小時，在訓練師的帶領下，<br>能獨立完成網站建置，我深信對於程式設計的造詣，蒸蒸日上。</div>
                     <div class="start-btn">瞭解更多</div>
                 </div>
@@ -74,18 +75,19 @@
         </section>
         <!-- 第二個頁面 -->
         <section>
-            <div class="content-page2">
-                <div class="content-left">
-
-
-                    <div class="small-title"></div>
-
+            <div class="content-page2-check">
+                <div class="title">個人經歷</div>
+                <div class="small-title">我是誠峻，準前端工程師</div>
+                <div class="fas introduce">
+                    從澎湖科大畢業後，進入水族館工作約一年半，習得專案管理與人際溝通等技巧，在過往舉辦活動專案時，需和許多個部門，合作共同找到最佳解，過去負責的項目包含流程撰寫、活動執行、專案管理等，這些過往的工作經驗，讓我在規劃程式時，能夠更加清楚的，明白自己的下一步。
                 </div>
-                <div class="content-right"></div>
-                <div class="content-right-check">
-                    <div class="face"></div>
-                </div>
+                <div class="insert"></div>
             </div>
+            <div class="content-page2">
+              
+
+            </div>
+
         </section>
 
     </main>
