--- a/resume/html/resume.html
+++ b/resume/html/resume.html
@@ -76,17 +76,33 @@
         <!-- 第二個頁面 -->
         <section>
             <div class="content-page2-check">
-                <div class="title">個人經歷</div>
-                <div class="small-title">我是誠峻，準前端工程師</div>
-                <div class="fas introduce">
-                    從澎湖科大畢業後，進入水族館工作約一年半，習得專案管理與人際溝通等技巧，在過往舉辦活動專案時，需和許多個部門，合作共同找到最佳解，過去負責的項目包含流程撰寫、活動執行、專案管理等，這些過往的工作經驗，讓我在規劃程式時，能夠更加清楚的，明白自己的下一步。
+                <div class="content-page2-check-text">
+                    <div class="title">個人經歷</div>
+                    <div class="small-title">我是<b><span class="strong">誠峻</span></b>，準前端工程師</div>
+                    <div class="fas introduce">
+                        從澎湖科大畢業後，進入水族館工作約一年半，習得專案管理與人際溝通等技巧，在過往舉辦活動專案時，需和許多個部門，合作共同找到最佳解，過去負責的項目包含流程撰寫、活動執行、專案管理等，這些過往的工作經驗，讓我在規劃程式時，能夠更加清楚的，明白自己的下一步。
+                    </div>
                 </div>
-                <div class="insert"></div>
-            </div>
-            <div class="content-page2">
-              
+                <div class="insert">
+                    <div class="insert-left">
+                        <div class="left-top"></div>
+                        <hr>
+                        <div class="left-bottom"></div>
+                    </div>
+                    <div class="turn">
+                    <hr>
+                </div>
+                    <div class="insert-right">
+                        <div class="right-top"></div>
+                        <hr>
+                        <div class="right-bottom"></div>
+                    </div>
+                    <div class="insert-text">文字</div>
+
+                </div>
 
             </div>
+
 
         </section>
 
