--- a/resume/html/resume.html
+++ b/resume/html/resume.html
@@ -75,7 +75,9 @@
         </section>
         <!-- 第二個頁面 -->
         <section>
+            <div class="copy"></div>
             <div class="content-page2-check">
+
                 <div class="content-page2-check-text">
                     <div class="title">個人經歷</div>
                     <div class="small-title">我是<b><span class="strong">誠峻</span></b>，準前端工程師</div>
@@ -83,22 +85,32 @@
                         從澎湖科大畢業後，進入水族館工作約一年半，習得專案管理與人際溝通等技巧，在過往舉辦活動專案時，需和許多個部門，合作共同找到最佳解，過去負責的項目包含流程撰寫、活動執行、專案管理等，這些過往的工作經驗，讓我在規劃程式時，能夠更加清楚的，明白自己的下一步。
                     </div>
                 </div>
-                <div class="insert">
-                    <div class="insert-left">
-                        <div class="left-top"></div>
-                        <hr>
-                        <div class="left-bottom"></div>
+                <div class="insert-all">
+                    <div class="insert">
+                        <div class="insert-left">
+                            <div class="left-top">HTML<p>切版技術熟練</p>
+                            </div>
+                            <div class="left-bottom">JS<br><p>邏輯思維清楚</p>
+                            </div>
+                        </div>
+                        <div class="insert-right">
+                            <div class="right-top">CSS <p>熟悉各種輔助工具</p>
+                            </div>
+                            <div class="right-bottom">PHP<p>架設購物車、成績系統等</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="turn">
-                    <hr>
-                </div>
-                    <div class="insert-right">
-                        <div class="right-top"></div>
-                        <hr>
-                        <div class="right-bottom"></div>
+                    <div class="insert-text">
+                        <ul class="title">其他專業技術
+                        <li class="introduce fas">套版資源使用:
+                            目前已使用過BOOTSTREAP,AOS,SWIPER,<br>fontawesome等套件軟體。
+                        </li>
+                 
+                        <li class="introduce fas">上下傳功能版本控制等技術，目前使用的是：git hub<br></li>
+                        <li class="introduce fas">使用SCSS加速網站維素與開發</li>
+                        <li class="introduce fas">使用AI進行基本修圖與編輯</li>
+                    </ul>
                     </div>
-                    <div class="insert-text">文字</div>
-
                 </div>
 
             </div>
