--- a/resume/html/resume.html
+++ b/resume/html/resume.html
@@ -90,7 +90,8 @@
                         <div class="insert-left">
                             <div class="left-top">HTML<p>切版技術熟練</p>
                             </div>
-                            <div class="left-bottom">JS<br><p>邏輯思維清楚</p>
+                            <div class="left-bottom">JS<br>
+                                <p>邏輯思維清楚</p>
                             </div>
                         </div>
                         <div class="insert-right">
@@ -102,14 +103,14 @@
                     </div>
                     <div class="insert-text">
                         <ul class="title">其他專業技術
-                        <li class="introduce fas">套版資源使用:
-                            目前已使用過BOOTSTREAP,AOS,SWIPER,<br>fontawesome等套件軟體。
-                        </li>
-                 
-                        <li class="introduce fas">上下傳功能版本控制等技術，目前使用的是：git hub<br></li>
-                        <li class="introduce fas">使用SCSS加速網站維素與開發</li>
-                        <li class="introduce fas">使用AI進行基本修圖與編輯</li>
-                    </ul>
+                            <li class="introduce fas">套版資源使用:
+                                目前已使用過BOOTSTREAP,AOS,SWIPER,<br>fontawesome等套件軟體。
+                            </li>
+
+                            <li class="introduce fas">上下傳功能版本控制等技術，目前使用的是：git hub<br></li>
+                            <li class="introduce fas">熟練使使用SCSS並加速網站維與開發</li>
+                            <li class="introduce fas">使用AI進行基本修圖與編輯</li>
+                        </ul>
                     </div>
                 </div>
 
