--- a/resume/html/resume.html
+++ b/resume/html/resume.html
@@ -12,6 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@800&display=swap" rel="stylesheet">
     <!-- icon -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <!-- swiper -->
+    <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+
     <!-- 我自己的style -->
     <link rel="stylesheet" href="../css/resume.css">
 
@@ -102,15 +105,15 @@
                         </div>
                     </div>
                     <div class="insert-text">
-                        <ul class="title">其他專業技術
+                        <ol class="title">其他專業技術
                             <li class="introduce fas">套版資源使用:
                                 目前已使用過BOOTSTREAP,AOS,SWIPER,<br>fontawesome等套件軟體。
                             </li>
 
                             <li class="introduce fas">上下傳功能版本控制等技術，目前使用的是：git hub<br></li>
                             <li class="introduce fas">熟練使使用SCSS並加速網站維與開發</li>
-                            <li class="introduce fas">使用AI進行基本修圖與編輯</li>
-                        </ul>
+                 
+                        </ol>
                     </div>
                 </div>
 
@@ -118,11 +121,14 @@
 
 
         </section>
+        <section>
 
+        </section>
     </main>
     <footer>
 
     </footer>
+    
 </body>
 
 </html>
