--- a/resume/html/resume.html
+++ b/resume/html/resume.html
@@ -13,8 +13,9 @@
     <!-- icon -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <!-- swiper -->
-    <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+    <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
 
+    <link rel="stylesheet" href="../css/swiper.css">
     <!-- 我自己的style -->
     <link rel="stylesheet" href="../css/resume.css">
 
@@ -77,7 +78,8 @@
             </div>
         </section>
         <!-- 第二個頁面 -->
-        <section>
+        <section style="height:100vh;display: flex;">
+            <div class="left"></div>
             <div class="copy"></div>
             <div class="content-page2-check">
 
@@ -100,35 +102,59 @@
                         <div class="insert-right">
                             <div class="right-top">CSS <p>熟悉各種輔助工具</p>
                             </div>
-                            <div class="right-bottom">PHP<p>架設購物車、成績系統等</p>
+                            <div class="right-bottom">PHP<p>簡易後端處理</p>
                             </div>
                         </div>
                     </div>
                     <div class="insert-text">
-                        <ol class="title">其他專業技術
-                            <li class="introduce fas">套版資源使用:
-                                目前已使用過BOOTSTREAP,AOS,SWIPER,<br>fontawesome等套件軟體。
-                            </li>
-
-                            <li class="introduce fas">上下傳功能版本控制等技術，目前使用的是：git hub<br></li>
-                            <li class="introduce fas">熟練使使用SCSS並加速網站維與開發</li>
-                 
+                        <ol class="title">其他專業工具
+                            <li class="introduce fas">
+BOOTSTREAP<br>AOS<br>SWIPER<br>fontawesome<br>git hub<br>SCSS</li>
                         </ol>
                     </div>
                 </div>
 
             </div>
-
-
         </section>
-        <section>
-
+  
+        <section class="content-page3">
+            <div style="width:200px;height:80vh"></div>
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">Slide 1</div>
+                  <div class="swiper-slide">Slide 2</div>
+                  <div class="swiper-slide">Slide 3</div>
+                  <div class="swiper-slide">Slide 4</div>
+                  <div class="swiper-slide">Slide 5</div>
+                  <div class="swiper-slide">Slide 6</div>
+                  <div class="swiper-slide">Slide 7</div>
+                  <div class="swiper-slide">Slide 8</div>
+                  <div class="swiper-slide">Slide 9</div>
+                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
+              </div>
         </section>
     </main>
     <footer>
 
     </footer>
-    
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
+    <!-- Initialize Swiper -->
+    <script>
+      var swiper = new Swiper(".mySwiper", {
+        pagination: {
+          el: ".swiper-pagination",
+          type: "progressbar",
+        },
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+      });
+    </script>
 </body>
 
 </html>
