--- a/resume/html/resume.html
+++ b/resume/html/resume.html
@@ -118,18 +118,14 @@ BOOTSTREAP<br>AOS<br>SWIPER<br>fontawesome<br>git hub<br>SCSS</li>
         </section>
   
         <section class="content-page3">
-            <div style="width:200px;height:80vh"></div>
+            <div class="contral"></div>
+            <div class="design-fell"></div>
             <div class="swiper mySwiper">
+                <div class="title">作品集</div>
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide">Slide 1</div>
-                  <div class="swiper-slide">Slide 2</div>
-                  <div class="swiper-slide">Slide 3</div>
-                  <div class="swiper-slide">Slide 4</div>
-                  <div class="swiper-slide">Slide 5</div>
-                  <div class="swiper-slide">Slide 6</div>
-                  <div class="swiper-slide">Slide 7</div>
-                  <div class="swiper-slide">Slide 8</div>
-                  <div class="swiper-slide">Slide 9</div>
+                  <div class="swiper-slide"><img src="../img/canasol/1.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="../img/canasol/2.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="../img/canasol/3.jpg" alt=""></div>
                 </div>
                 <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
