--- a/resume/html/resume.html
+++ b/resume/html/resume.html
@@ -134,7 +134,7 @@ BOOTSTREAP<br>AOS<br>SWIPER<br>fontawesome<br>git hub<br>SCSS</li>
         </section>
     </main>
     <footer>
-
+       <div> Copyright © CJ's resume Web All Rights Reserved.</div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
