--- a/resume/html/resume.html
+++ b/resume/html/resume.html
@@ -22,6 +22,11 @@
 </head>
 
 <body>
+    <div class="hidden">
+        <h3><p>首先謝謝您點開致謝名單</p></h3>
+        <p>完成這份簡易的履歷網站，雖然沒有花費許多時間，但卻讓我收穫了許多友情，基於個資法，不透露協助我的人，</p>
+        <p>倘若您是曾經幫助過我的人，在此我想對你說一聲謝謝!</p><p>倘若您只是不小心點開的人，也謝謝您看到這裡!</p>
+    </div>
     <!-- 全部都有的東西 -->
     <nav>
         <div class="nav-left">
@@ -30,13 +35,13 @@
                 <div class="drop-down-menu">
                     <div><a class="fas " href="#"> 首頁</a>
                     </div>
-                    <div><a class="fas " href="#"> 自傳</a>
+                    <div><a class="fas " href="#introduce"> 個人經歷</a>
                     </div>
-                    <div><a class="fas " href="#">作品集</a>
+                    <div><a class="fas " href="#work">作品集</a>
                     </div>
                     <div><a class="fas " href="#">致謝</a>
                     </div>
-                    <div><a class="fas " href="#">聯絡誠峻</a>
+                    <div><a class="fas " href="mailto:b09785157888@gmail.com">聯絡誠峻</a>
                     </div>
                     </class=>
                 </div>
@@ -78,7 +83,7 @@
             </div>
         </section>
         <!-- 第二個頁面 -->
-        <section style="height:100vh;display: flex;">
+        <section style="height:100vh;display: flex;">   <a id="introduce"></a>
             <div class="left"></div>
             <div class="copy"></div>
             <div class="content-page2-check">
@@ -107,9 +112,13 @@
                         </div>
                     </div>
                     <div class="insert-text">
-                        <ol class="title">其他專業工具
-                            <li class="introduce fas">
-BOOTSTREAP<br>AOS<br>SWIPER<br>fontawesome<br>git hub<br>SCSS</li>
+                        <div class="fas title">其他專業技術</div>
+                        <ol> 
+                            <li class="introduce fas">BOOTSTREAP</li>
+                            <li class="introduce fas">AOS</li>
+                            <li class="introduce fas">SWIPER</li>
+                            <li class="introduce fas">fontawesome</li>
+                            <li class="introduce fas">git hub</li>
                         </ol>
                     </div>
                 </div>
@@ -118,6 +127,7 @@ BOOTSTREAP<br>AOS<br>SWIPER<br>fontawesome<br>git hub<br>SCSS</li>
         </section>
   
         <section class="content-page3">
+            <a id="work"></a>
             <div class="contral"></div>
             <div class="design-fell"></div>
             <div class="swiper mySwiper">
