--- a/resume/html/try.html
+++ b/resume/html/try.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <ul class="title">其他專業技術
+    <ul >
+        <li class="title">其他專業技術</li>
         <li class="introduce fas">套版資源使用:
             目前已使用過BOOTSTREAP,AOS,SWIPER,<br>fontawesome等套件軟體。
         </li>
