--- a/resume/html/resume.html
+++ b/resume/html/resume.html
@@ -14,8 +14,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <!-- swiper -->
     <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
-
     <link rel="stylesheet" href="../css/swiper.css">
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- 我自己的style -->
     <link rel="stylesheet" href="../css/resume.css">
 
@@ -31,7 +32,9 @@
         <h5 align="right">以此紀念在職訓局收穫的一眾朋友</h5>
     </div>
     <!-- 全部都有的東西 -->
+
     <nav>
+
         <div class="nav-left">
             <div class="face"></div>
             <div class="select-nav">
@@ -42,15 +45,16 @@
                     </div>
                     <div><a class="fas " href="#work">作品集</a>
                     </div>
-                    <div><a class="fas " href="#"><label for="close-btn">致謝</label></a>
+                    <div><a  href="#"><label class="fas" for="close-btn">致謝</label></a>
                     </div>
                     <div><a class="fas " href="mailto:b09785157888@gmail.com">聯絡誠峻</a>
                     </div>
                     </class=>
                 </div>
 
-            </div>
+       
         </div>
+
         <div class="nav-right">
             
             <ul class="drop-down-menu">
@@ -68,6 +72,7 @@
             </ul>
         </div>
     </nav>
+</div>
     <main>
         <section>
             <div class="content-page1">
@@ -109,7 +114,7 @@
                             </div>
                         </div>
                         <div class="insert-right">
-                            <div class="right-top">CSS <p>熟悉各種輔助工具</p>
+                            <div class="right-top">CSS <p>熟悉輔助工具</p>
                             </div>
                             <div class="right-bottom">PHP<p>簡易後端處理</p>
                             </div>
@@ -165,6 +170,12 @@
         },
       });
     </script>
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
+
     <!-- 我自己的js -->
     <script src="../js/resume.js">
     </script>
