--- a/mirsoft/html/mirsoft.html
+++ b/mirsoft/html/mirsoft.html
@@ -16,29 +16,42 @@
 
 <body>
     <nav>
-           <!-- 手機版本 -->
-<div class="mobile">
-    <label class="open" for="switch">三</label>
-    <!-- <label class="X" for="switch">X</label> -->
-    <input type="checkbox" id="switch">
-    <ul class="menu">
-      <li><a href="##">Micrsoft 365</a></li>
-      <li><a href="##">Teams</a></li>
-      <li><a href="##">Windows</a></li>
-      <li><a href="##">Surface</a></li>
-      <li><a href="##">Xbox</a></li>
-      <li><a href="##">支援</a></li>
-      <li><a href="##"><div>軟體</div></a></li>
-      <li><a href="##"><div>個人電腦和設備</div></a></li>
-      <li><a href="##"><div>娛樂</div></a></li>
-      <li><a href="##"><div>商務適用</div></a></li>
-      <li><a href="##"><div>開發人員與IT</div></a></li>
-      <li><a href="##"><div>其他</div></a></li>
-      <li><a href="##">
-        檢視網站地圖</a></li>
-    </ul>
-</div>
-<!-- 電腦 -->
+        <!-- 手機版本 -->
+        <div class="mobile">
+
+            <!-- <label class="X" for="switch">X</label> -->
+            <input type="checkbox" id="switch">
+            <label class="open" for="switch"></label>
+            <ul class="menu">
+                <li><a href="##">Micrsoft 365</a></li>
+                <li><a href="##">Teams</a></li>
+                <li><a href="##">Windows</a></li>
+                <li><a href="##">Surface</a></li>
+                <li><a href="##">Xbox</a></li>
+                <li><a href="##">支援</a></li>
+                <li><a href="##">
+                        <div>軟體</div>
+                    </a></li>
+                <li><a href="##">
+                        <div>個人電腦和設備</div>
+                    </a></li>
+                <li><a href="##">
+                        <div>娛樂</div>
+                    </a></li>
+                <li><a href="##">
+                        <div>商務適用</div>
+                    </a></li>
+                <li><a href="##">
+                        <div>開發人員與IT</div>
+                    </a></li>
+                <li><a href="##">
+                        <div>其他</div>
+                    </a></li>
+                <li><a href="##">
+                        檢視網站地圖</a></li>
+            </ul>
+        </div>
+        <!-- 電腦 -->
         <div class="links">
             <div class="logo"></div>
             <div class="link mirsoft">Micrsoft 365</div>
@@ -52,36 +65,59 @@
             </div>
         </div>
         <div class="functions">
-            <div class="all"> 
+            <div class="all">
                 <span>所有Microsoft</span>
                 <div class="icon"></div>
             </div>
-            <div class="function"> 
+            <div class="function">
                 <span>搜尋</span>
                 <div class="icon search"></div>
             </div>
-            <div class="function car"> 
-                <span >購物車</span>
+            <div class="function car">
+                <span>購物車</span>
                 <div class="icon shopping"></div>
             </div>
-            <div class="function"> 
-                <span >登入</span>
+            <div class="function">
+                <span>登入</span>
                 <div class="icon login"></div>
             </div>
         </div>
 
 
- 
+
     </nav>
     <main>
         <section>
             <div class="bander">
+                <div class="content">
+                    <h3 class="title">新上市</h3>
+                    <h1 class="big-title">Suface Pro 9</h1>
+                    <h4>筆記型電腦效能和平板電腦彈性的顛覆性組合，全都在一台攜帶超方便的裝置，送禮自用兩相宜</h4>
+
+                    <h3 class="buy-btn">選購Suface Pro 9</h3>
+
+                </div>
                 <picture>
-                    <source data-srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-All-Colors-FY23HOL:VP5-1920x600" media="(min-width: 1400px)" srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-All-Colors-FY23HOL:VP5-1920x600">
-                    <source data-srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-All-Colors-FY23HOL:VP4-1399x600" media="(min-width: 1084px)" srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-All-Colors-FY23HOL:VP4-1399x600">
-                    <source data-srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-All-Colors-FY23HOL:VP3-1083x600" media="(min-width: 860px)" srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-All-Colors-FY23HOL:VP3-1083x600">
-                    <source data-srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-All-Colors-FY23HOL:VP2-859x540" media="(min-width: 540px)" srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-All-Colors-FY23HOL:VP2-859x540">
-                    <img data-src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-All-Colors-FY23HOL:VP1-539x440" class="card-img w-100 blur-up lazypreload ls-is-cached lazyloaded" alt="多種色彩的 Surface Pro 9 裝置和鍵盤" src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-All-Colors-FY23HOL:VP1-539x440">
+                    <source
+                        data-srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-All-Colors-FY23HOL:VP5-1920x600"
+                        media="(min-width: 1400px)"
+                        srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-All-Colors-FY23HOL:VP5-1920x600">
+                    <source
+                        data-srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-All-Colors-FY23HOL:VP4-1399x600"
+                        media="(min-width: 1084px)"
+                        srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-All-Colors-FY23HOL:VP4-1399x600">
+                    <source
+                        data-srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-All-Colors-FY23HOL:VP3-1083x600"
+                        media="(min-width: 860px)"
+                        srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-All-Colors-FY23HOL:VP3-1083x600">
+                    <source
+                        data-srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-All-Colors-FY23HOL:VP2-859x540"
+                        media="(min-width: 540px)"
+                        srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-All-Colors-FY23HOL:VP2-859x540">
+                    <img data-src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-All-Colors-FY23HOL:VP1-539x440"
+                        class="card-img w-100 blur-up lazypreload ls-is-cached lazyloaded"
+                        alt="多種色彩的 Surface Pro 9 裝置和鍵盤"
+                        src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-All-Colors-FY23HOL:VP1-539x440">
                 </picture>
             </div>
         </section>
