--- a/mirsoft/html/mirsoft.html
+++ b/mirsoft/html/mirsoft.html
@@ -90,12 +90,14 @@
         <section>
             <div class="bander">
                 <div class="content">
-                    <h3 class="title">新上市</h3>
-                    <h1 class="big-title">Suface Pro 9</h1>
-                    <h4>筆記型電腦效能和平板電腦彈性的顛覆性組合，全都在一台攜帶超方便的裝置，送禮自用兩相宜</h4>
+                  <div class="content-include">
+                        <h3 class="title">新上市</h3>
+                        <h1 class="big-title">Suface Pro 9</h1>
+                        <div class="text">筆記型電腦效能和平板電腦彈性的顛覆性組合，全都在一台攜帶超方便的裝置，送禮自用兩相宜</div>
+    
+                        <div class="buy-btn">選購 Suface Pro 9</div>
 
-                    <h3 class="buy-btn">選購Suface Pro 9</h3>
-
+                  </div> 
                 </div>
                 <picture>
                     <source
