--- a/mirsoft/html/mirsoft.html
+++ b/mirsoft/html/mirsoft.html
@@ -54,7 +54,7 @@
         <!-- 電腦 -->
         <div class="links">
             <div class="logo"></div>
-            <div class="link mirsoft">Micrsoft 365</div>
+            <div class="link mirsoft">Microsoft 365</div>
             <div class="link eams">Teams</div>
             <div class="link windows">Windows</div>
             <div class="link surface">Surface</div>
@@ -66,7 +66,7 @@
         </div>
         <div class="functions">
             <div class="all">
-                <span>所有Microsoft</span>
+                <span>所有 Microsoft</span>
                 <div class="icon"></div>
             </div>
             <div class="function">
