--- a/Newfile/mirsoft/html/mirsoft.html
+++ b/Newfile/mirsoft/html/mirsoft.html
@@ -19,35 +19,35 @@
         <!-- 手機版本 -->
         <div class="mobile">
 
-            <!-- <label class="X" for="switch">X</label> -->
+          
             <input type="checkbox" id="switch">
             <label class="open" for="switch"></label>
             <ul class="menu">
-                <li><a href="##">Micrsoft 365</a></li>
-                <li><a href="##">Teams</a></li>
-                <li><a href="##">Windows</a></li>
-                <li><a href="##">Surface</a></li>
-                <li><a href="##">Xbox</a></li>
-                <li><a href="##">支援</a></li>
-                <li><a href="##">
+                <li class="first"><a href="#">Micrsoft 365</a></li>
+                <li><a href="#">Teams</a></li>
+                <li><a href="#">Windows</a></li>
+                <li><a href="#">Surface</a></li>
+                <li><a href="#">Xbox</a></li>
+                <li><a href="#">支援</a></li>
+                <li><a href="#">
                         <div>軟體</div>
                     </a></li>
-                <li><a href="##">
+                <li><a href="#">
                         <div>個人電腦和設備</div>
                     </a></li>
-                <li><a href="##">
+                <li><a href="#">
                         <div>娛樂</div>
                     </a></li>
-                <li><a href="##">
+                <li><a href="#">
                         <div>商務適用</div>
                     </a></li>
-                <li><a href="##">
+                <li><a href="#">
                         <div>開發人員與IT</div>
                     </a></li>
-                <li><a href="##">
+                <li><a href="#">
                         <div>其他</div>
                     </a></li>
-                <li><a href="##">
+                <li class="list"><a href="#">
                         檢視網站地圖</a></li>
             </ul>
         </div>
