剩下一半了喔

--- a/Newfile/mirsoft/html/mirsoft.html
+++ b/Newfile/mirsoft/html/mirsoft.html
@@ -19,7 +19,7 @@
         <!-- 手機版本 -->
         <div class="mobile">
 
-          
+
             <input type="checkbox" id="switch">
             <label class="open" for="switch"></label>
             <ul class="menu">
@@ -90,14 +90,14 @@
         <section>
             <div class="bander">
                 <div class="content">
-                  <div class="content-include">
+                    <div class="content-include">
                         <h3 class="title">新上市</h3>
                         <h1 class="big-title">Suface Pro 9</h1>
                         <div class="text">筆記型電腦效能和平板電腦彈性的顛覆性組合，全都在一台攜帶超方便的裝置，送禮自用兩相宜</div>
-    
+
                         <div class="buy-btn">選購 Suface Pro 9</div>
 
-                  </div> 
+                    </div>
                 </div>
                 <picture>
                     <source
@@ -121,6 +121,41 @@
                         alt="多種色彩的 Surface Pro 9 裝置和鍵盤"
                         src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Surface-Pro-9-All-Colors-FY23HOL:VP1-539x440">
                 </picture>
+            </div>
+        </section>
+        <section>
+            <div class="chose">
+                <div class="space-left">
+                    <div class="space left"></div>
+                </div>
+                <div>
+                    <div class="space black"></div>
+                </div>
+                <div>
+                    <div class="space white"></div>
+                </div>
+                <div class="space-right">
+                    <div class="space right"></div>
+                </div>
+
+            </div>
+        </section>
+        <!-- 三個小東西 -->
+
+        <section>
+            <div class="jump">
+                <div class="space left">
+                    <div class="windows"></div>
+                    <a class="text"><b>選擇您的 Microsoft 365</b></a>
+                </div>
+                <div  class="space"> 
+                    <div class="pad"></div>
+                    <a class="text"><b>選購 Surface 裝置</b></a>
+                </div>
+                <div  class="space right">
+                    <div class="windows"></div>
+                    <a class="text"><b>取得 Windows 11</b></a>
+                </div>
             </div>
         </section>
     </main>
