--- a/Newfile/mirsoft/html/mirsoft.html
+++ b/Newfile/mirsoft/html/mirsoft.html
@@ -123,7 +123,7 @@
                 </picture>
             </div>
         </section>
-        <section>
+        <section class="space">
             <div class="chose">
                 <div class="space-left">
                     <div class="space left"></div>
@@ -148,13 +148,144 @@
                     <div class="windows"></div>
                     <a class="text"><b>選擇您的 Microsoft 365</b></a>
                 </div>
-                <div  class="space"> 
+                <div class="space">
                     <div class="pad"></div>
                     <a class="text"><b>選購 Surface 裝置</b></a>
                 </div>
-                <div  class="space right">
+                <div class="space right">
                     <div class="windows"></div>
                     <a class="text"><b>取得 Windows 11</b></a>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="all-cards">
+                <div class="four-card">
+                    <div class="card">
+                        <picture>
+                            <source
+                                data-srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=380&amp;hei=213&amp;fit=crop"
+                                media="(min-width: 1400px)"
+                                srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=380&amp;hei=213&amp;fit=crop">
+                            <source
+                                data-srcset=" https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=297&amp;hei=167&amp;fit=crop"
+                                media="(min-width: 1084px)"
+                                srcset=" https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=297&amp;hei=167&amp;fit=crop">
+                            <source
+                                data-srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=517&amp;hei=293&amp;fit=crop"
+                                media="(min-width: 860px)"
+                                srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=517&amp;hei=293&amp;fit=crop">
+                            <source
+                                data-srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=406&amp;hei=230&amp;fit=crop"
+                                media="(min-width: 540px)"
+                                srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=406&amp;hei=230&amp;fit=crop">
+                            <img data-src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=515&amp;hei=293&amp;fit=crop"
+                                src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=515&amp;hei=293&amp;fit=crop"
+                                class="card-img blur-up lazypreload lazyloaded"
+                                alt="铂金 Surface-Laptop 5，配备 Alcantara 织物键盘">
+                        </picture>
+                        <div class="text">
+                            <div class="new">新上市</div>
+                            <div class="title">Surface Laptop 5</div>
+                            <div class="content">配備細緻的風格和由第 12 代 Intel® Core™ i5/i7 處理器 (基於 Intel® Evo™ 平台)
+                                支援的多工速度，這真是完美的禮物。</div>
+                            <a class="buy">選購 Surface Laptop 5</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <picture>
+                            <source
+                                data-srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=380&amp;hei=213&amp;fit=crop"
+                                media="(min-width: 1400px)"
+                                srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=380&amp;hei=213&amp;fit=crop">
+                            <source
+                                data-srcset=" https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=297&amp;hei=167&amp;fit=crop"
+                                media="(min-width: 1084px)"
+                                srcset=" https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=297&amp;hei=167&amp;fit=crop">
+                            <source
+                                data-srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=517&amp;hei=293&amp;fit=crop"
+                                media="(min-width: 860px)"
+                                srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=517&amp;hei=293&amp;fit=crop">
+                            <source
+                                data-srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=406&amp;hei=230&amp;fit=crop"
+                                media="(min-width: 540px)"
+                                srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=406&amp;hei=230&amp;fit=crop">
+                            <img data-src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=515&amp;hei=293&amp;fit=crop"
+                                src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=515&amp;hei=293&amp;fit=crop"
+                                class="card-img blur-up lazypreload lazyloaded"
+                                alt="铂金 Surface-Laptop 5，配备 Alcantara 织物键盘">
+                        </picture>
+                        <div class="text">
+                            <div class="new">新上市</div>
+                            <div class="title">Surface Laptop 5</div>
+                            <div class="content">配備細緻的風格和由第 12 代 Intel® Core™ i5/i7 處理器 (基於 Intel® Evo™ 平台)
+                                支援的多工速度，這真是完美的禮物。</div>
+                            <a class="buy">選購 Surface Laptop 5</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <picture>
+                            <source
+                                data-srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=380&amp;hei=213&amp;fit=crop"
+                                media="(min-width: 1400px)"
+                                srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=380&amp;hei=213&amp;fit=crop">
+                            <source
+                                data-srcset=" https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=297&amp;hei=167&amp;fit=crop"
+                                media="(min-width: 1084px)"
+                                srcset=" https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=297&amp;hei=167&amp;fit=crop">
+                            <source
+                                data-srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=517&amp;hei=293&amp;fit=crop"
+                                media="(min-width: 860px)"
+                                srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=517&amp;hei=293&amp;fit=crop">
+                            <source
+                                data-srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=406&amp;hei=230&amp;fit=crop"
+                                media="(min-width: 540px)"
+                                srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=406&amp;hei=230&amp;fit=crop">
+                            <img data-src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=515&amp;hei=293&amp;fit=crop"
+                                src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=515&amp;hei=293&amp;fit=crop"
+                                class="card-img blur-up lazypreload lazyloaded"
+                                alt="铂金 Surface-Laptop 5，配备 Alcantara 织物键盘">
+                        </picture>
+                        <div class="text">
+                            <div class="new">新上市</div>
+                            <div class="title">Surface Laptop 5</div>
+                            <div class="content">配備細緻的風格和由第 12 代 Intel® Core™ i5/i7 處理器 (基於 Intel® Evo™ 平台)
+                                支援的多工速度，這真是完美的禮物。</div>
+                            <a class="buy">選購 Surface Laptop 5</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <picture>
+                            <source
+                                data-srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=380&amp;hei=213&amp;fit=crop"
+                                media="(min-width: 1400px)"
+                                srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=380&amp;hei=213&amp;fit=crop">
+                            <source
+                                data-srcset=" https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=297&amp;hei=167&amp;fit=crop"
+                                media="(min-width: 1084px)"
+                                srcset=" https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=297&amp;hei=167&amp;fit=crop">
+                            <source
+                                data-srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=517&amp;hei=293&amp;fit=crop"
+                                media="(min-width: 860px)"
+                                srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=517&amp;hei=293&amp;fit=crop">
+                            <source
+                                data-srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=406&amp;hei=230&amp;fit=crop"
+                                media="(min-width: 540px)"
+                                srcset="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=406&amp;hei=230&amp;fit=crop">
+                            <img data-src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=515&amp;hei=293&amp;fit=crop"
+                                src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Laptop-5-Platinum-Alcantara-FY23HOL?wid=515&amp;hei=293&amp;fit=crop"
+                                class="card-img blur-up lazypreload lazyloaded"
+                                alt="铂金 Surface-Laptop 5，配备 Alcantara 织物键盘">
+                        </picture>
+                        <div class="text">
+                            <div class="new">新上市</div>
+                            <div class="title">Surface Laptop 5</div>
+                            <div class="content">配備細緻的風格和由第 12 代 Intel® Core™ i5/i7 處理器 (基於 Intel® Evo™ 平台)
+                                支援的多工速度，這真是完美的禮物。</div>
+                            <a class="buy">選購 Surface Laptop 5</a>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
