--- a/Newfile/mirsoft/html/mirsoft.html
+++ b/Newfile/mirsoft/html/mirsoft.html
@@ -289,7 +289,7 @@
             </div>
         </section>
         <!-- 再來一次輪流播放吧 -->
-        <section class="bander-start carousal">
+        <!-- <section class="bander-start carousal">
             <div class="bander">
                 <div class="content">
                     <div class="content-include">
@@ -323,9 +323,9 @@
                         src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-PC-GamePass-Light-FY23HOL:VP1-539x440">
                 </picture>
             </div>
-        </section>
+        </section> -->
         <!-- 再來一次卡片吧 -->
-        <section class="card-no2">
+        <!-- <section class="card-no2">
 
             <div class="all-cards">
 
@@ -456,7 +456,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
     <footer>
         <div class="all-footer">
