--- a/Newfile/works/html/index.html
+++ b/Newfile/works/html/index.html
@@ -19,12 +19,23 @@
 
             </div>
             <div class="functions">
-                <div class="function">
+                <input id="drop-down-money" type="checkbox">
+                <label for="drop-down-money" class="function hidden-1200">
                     <i class="fas fa-dollar-sign">USD</i><i class="fas fa-chevron-down"></i>
-                </div>
-                <div class="function">
+                    <ul class="function-ul">
+                        <li>USD</li>
+                        <li>NTW</li>
+                    </ul>
+                </label>
+                <input id="drop-down-langue" type="checkbox">
+                <label for="drop-down-langue" class="function hidden-1200">
                     <i class="fas fa-globe">繁體中文</i><i class="fas fa-chevron-down"></i>
-                </div>
+
+                    <ul class="function-ul">
+                        <li>繁體中文</li>
+                        <li>English</li>
+                    </ul>
+                </label>
                 <div class="function">
 
                 </div>
