--- a/Newfile/宜倫姐的技術支援/mywebsite.html
+++ b/Newfile/宜倫姐的技術支援/mywebsite.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-
+  <div id="all">
   <section id="header">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">logo</a>
@@ -29,39 +29,34 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">最新消息</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">品牌理念</a>
+            <a class="nav-link" href="mailto:b09785157888@gmail.com">聯絡我</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-              系列產品
+              作品集
             </a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">綠茶</a>
+              <a class="dropdown-item" href="#">ＢＭＩ測量</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">紅茶</a>
+              <a class="dropdown-item" href="#">色弱遊戲製作</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">白茶</a>
+              <a class="dropdown-item" href="#">氣象預報</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">黃茶</a>
+              <a class="dropdown-item" href="#">剪刀石頭布遊戲製作</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">黑茶</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">青茶</a>
+              <a class="dropdown-item" href="#">ＪＳ30</a>
+
             </div>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-              銷售據點
+              可上班地點
             </a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">人間</a>
+              <a class="dropdown-item" href="#">台中</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">地獄</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">天堂</a>
+              <a class="dropdown-item" href="#">澎湖</a>
+
             </div>
           </li>
         </ul>
@@ -85,25 +80,16 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./images/tea01.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h2>好茶知時節，定心品春意</h2>
-                  <h4>明前春茶，每一口都能喝到春天</h4>
-                </div>
+                <img src="./images/canasol/1.jpg" class="d-block w-100" alt="...">
+
               </div>
               <div class="carousel-item">
-                <img src="./images/tea02.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h2>任時光煮雨，烹一盏香茗</h2>
-                  <h4>時間的沉香，喝一段醉人的温柔時光</h4>
-                </div>
+                <img src="./images/canasol/2.jpg" class="d-block w-100" alt="...">
+
               </div>
               <div class="carousel-item">
-                <img src="./images/tea03.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h2>自在清飲，詩意生活</h2>
-                  <h4>人生真正需要的，不是昂贵的茶，而是喝茶的心情</h4>
-                </div>
+                <img src="./images/canasol/3.jpg" class="d-block w-100" alt="...">
+
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-target="#carouselExampleCaptions"
@@ -165,20 +151,20 @@
       <div class="col-md-12">
         <div class="jumbotron jumbotron-fluid sub-visual">
           <div class="container">
-            <h4 class="display-4">越人理念</h4>
+            <h4 class="display-4">學習理念</h4>
             <p class="lead">
-              渴望喚醒中國的茶文化精神，重新恢復過往茶所代表的慢、靜、自持等人文特性，在這普遍精神缺乏與快節奏焦慮的時代，<br>我們已經失去等待一杯好茶沏成的耐心，更遺失了欣賞一次清明穀雨、一回花開花謝、一輪皎潔月色的心境，或許，<br>我們需要一個來自茶的輕輕的提醒，來告訴現世所有行色匆匆的人們：「陌上花開，可緩緩歸矣。」
+              走入程式設計的道路，感謝過去在澎湖水族館工作的經歷，那時候的活動企劃，打算結合手機，開發出一款簡單的互動遊戲，為了與接洽廠商更好地瞭解構思，開始了自學Ｃ＋＋的道路，那段日子的我早起貪黑，在完全沒有人指導的情況下，看著網路上的教學，第一次做出了一個金字塔（迴圈應用），雖然最後，我們採用了lineBot的技術，因此不太需要寫程式，但這也讓我為自己打開了撰寫程式的一條路。
             </p>
-            <img src="./images/subvisual.jpg">
+            <img  class="adjust-title" src="./images/skillStree.jpg">
             <p>
             <div class="media sub-visual sub-cont">
-              <img src="./images/subvisual02.jpg" class="mr-3">
+              <img src="./images/ＢＭＩ.png" class="adjust">
               <div class="media-body">
-                <p class="sub-cont">
-                  中歲頗好道，晚家南山垂。
-                  興來每獨往，勝事空自知。<br>
-                  行到水窮處，坐看雲起時。
-                  偶然值林叟，談笑無還期。<br>
+                <p style="text-align: right;margin-left: 50px;" class="sub-cont">
+                  BMI測量<br>
+                  點擊就可前往，這是在職訓局中<br>
+                  學到的第一個程式<br>
+       
                   <hr>
                 </p>
               </div>
@@ -187,9 +173,9 @@
             <div class="media sub-visual sub-cont">
               <div class="media-body">
                 <p class="sub-cont">
-                  一飲滌昏寐，情來朗爽滿天地。<br>
-                  再飲清我神，忽如飛雨灑輕塵。<br>
-                  三飲便得道，何須苦心破煩惱。<br>
+                 在職訓局中，正式踏上學習的道路<br>
+                  懸粱刺骨，提醒自己絕對不能失敗<br>
+                  最終，取得第二名家績<br>
                   <hr>
                 </p>
               </div>
@@ -205,52 +191,12 @@
   <section id="prompt-video">
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-4">越人精神</h1>
-        <p class="lead">人生似水豈無涯，浮雲吹作雪，世味煮成茶</p>
-        <video src="./video/visual-video.mp4" controls autoplay></video>
-      </div>
-    </div>
-  </section>
-  <section id="news">
-    <div class="row">
-      <h1 class="news-title">越人文章</h1>
-    </div>
-    <div class="row">
-      <div class="col-sm-3">
-        <div class="card news">
-          <div class="card-body">
-            <h5 class="card-title article-title">喝的是茶，過的是生活</h5>
-            <p class="card-text">茶葉的重點不在茶葉本身，而是在於喝茶的人，產地、海拔、品種、品質、製造技術和價格都只是參考，重點在於了不了解自己喜歡的為何。</p>
-            <button class="link">Read</button>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-3">
-        <div class="card news">
-          <div class="card-body">
-            <h5 class="card-title article-title">世界越快，味自慢</h5>
-            <p class="card-text">宋朝已有春茶、夏茶和秋茶。宋徽宗時福建路轉運使用暖房使茶樹冬不休眠，反在十冬臘月抽新芽，以芽茶製成貢茶獻給徽宗，而創冬茶。</p>
-            <button class="link">Read</button>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-3">
-        <div class="card news">
-          <div class="card-body">
-            <h5 class="card-title article-title">古代茶學</h5>
-            <p class="card-text">唐代陸羽《茶經》將茶分爲四類：粗茶、散茶、末茶、餅茶。餅茶自三國時期已經出現，是飲用最廣、最講究的茶類。</p>
-            <button class="link">Read</button>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-3">
-        <div class="card news">
-          <div class="card-body">
-            <h5 class="card-title article-title">茶葉分類</h5>
-            <p class="card-text">茶，是指利用茶樹的葉子所加工製成的飲料，也可以加入食物中調味，也可入中藥使用。現代的茶主要分爲六大類，綠茶、白茶、黃茶、青茶、紅茶、黑茶。</p>
-            <button class="link">Read</button>
-          </div>
-        </div>
+        <h1 class="display-4">誠峻簡歷</h1>
+        <p class="lead">準前端工程師</p>
+        <p class="sub-cont">畢業於：國立澎湖科技大學行銷與物流管理系</p>
+        <p class="sub-cont">學習程式：約半年，但憑藉興趣，已能建立網頁</p>
+        <p class="sub-cont">熟悉工具：html,css,JS,github</p>
+        <p class="sub-cont">略懂工具：php,MySql,bootstrap</p>
       </div>
     </div>
   </section>
@@ -259,7 +205,7 @@
       <div id="footer-data" class="row">
         <div class="col-md-6">
           <h6>電話：04-12345678 免付費電話：0800-123 456</h6>
-          <h6>copyright © 2022 gucyu Inc. All Rights Reserved.</h6>
+          <h6>copyright © 2022 ＣＪ's web. All Rights Reserved.</h6>
         </div>
         <div class="col-md-6 social-area">
           <a href="https://zh-tw.facebook.com/"><i class="fab fa-facebook fa-2x mr-3"></i></a>
@@ -278,7 +224,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
     crossorigin="anonymous"></script>
-
+  </div>
 </body>
 
 </html>
